# perfometrics

./: .gitignore  README.md  pyproject.toml  setup.py
src/perfometrics/: curl.py  decorators.py  status_checker.py
src/uptime_utils/: domain_checker.py  status_checker.py
tests/: tests.py
